<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_user"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dramkos.ui.user.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_user" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.dramkos.ui.user.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_rating"
        android:name="com.example.dramkos.ui.user.rating.RatingFragment"
        android:label="@string/title_rating"
        tools:layout="@layout/fragment_rating" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.dramkos.ui.user.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_user" />

</navigation>