<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:src="@drawable/vectorstroke" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DRAMAKOS"
                android:textAlignment="center"
                android:textColor="#2C7EF4"
                android:textSize="47.06sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUser"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:backgroundTint="@color/secondaryColor"
                    android:text="@string/User"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdmin"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/Admin"
                    android:textColor="@color/white" />

            </com.google.android.material.button.MaterialButtonToggleGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:boxStrokeWidthFocused="0sp"
                app:boxStrokeColor="@color/transparant"
                app:boxStrokeErrorColor="@color/transparant"
                app:boxStrokeWidth="0sp"
                app:boxBackgroundColor="@color/colorPrimary_100"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username/Email"
                    android:paddingStart="@dimen/_10sdp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:boxStrokeWidthFocused="0sp"
                app:boxStrokeColor="@color/transparant"
                app:boxStrokeErrorColor="@color/transparant"
                app:boxStrokeWidth="0sp"
                app:boxBackgroundColor="@color/colorPrimary_100"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:paddingStart="@dimen/_10sdp"
                    android:hint="Password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:text="@string/masuk"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@color/white"
                    android:text="Daftar"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>


